--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "supertest": "^6.3.4",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.3.3",
     "vite": "^5.0.0",
     "vitest": "^1.2.0"
